--- a/index.html
+++ b/index.html
@@ -330,12 +330,12 @@
         </div>
     
         <pre class="text-popup">
-  - Hộp quà top 1: 
-  + 14 Reset Card 
-  + 1 Thẻ Chuyển Class Tùy Chọn 
-  + 5 Hộp Bí Ẩn 
-  + 1 Quyền đổi trang bị đồng cấp
-  + 1 lần đổi class không bị giảm trừ số lần reset
+  - HỘP QUÀ TOP 1: 
+      + 14 Reset Card 
+      + 1 Thẻ Chuyển Class Tùy Chọn 
+      + 5 Hộp Bí Ẩn 
+      + 1 Quyền đổi trang bị đồng cấp
+      + 1 lần đổi class không bị giảm trừ số lần reset
           </pre>
       </div>
 
@@ -348,9 +348,9 @@
         </div>
 
         <pre class="text-popup">
-  - Hộp quà 750.000 KC:
+  - HỘP QUÀ 750.000 KC:
   + Cụm Reset : 
-  + 1 lần đổi class không bị giảm trừ số lần reset
+      + 1 lần đổi class không bị giảm trừ số lần reset
           </pre>
       </div>
 
@@ -363,13 +363,13 @@
         </div>
 
         <pre class="text-popup">
-  - Hộp quà 300.000 KC:
-  + Cụm Reset
-  + 18 Reset Card
-  + 1 Lệnh bài bất đổi Class
-  + Cụm Free
-  + 270 vé Lucky
-  + 1 Lệnh bài bất đổi Class                          
+  - HỘP QUÀ 300.000 KC:
+  + Cụm Reset :
+      + 18 Reset Card
+      + 1 Lệnh bài bất đổi Class
+      + Cụm Free
+      + 270 vé Lucky
+      + 1 Lệnh bài bất đổi Class                          
           </pre>
       </div>
 
@@ -382,11 +382,11 @@
         </div>
 
         <pre class="text-popup">
-  - Hộp quà 100.000 KC:
-  + Cụm Reset 
-  + 9 Reset Card
-  + Cụm Free
-  + 135 vé Lucky                               
+  - HỘP QUÀ 100.000 KC:
+  + Cụm Reset :
+      + 9 Reset Card
+      + Cụm Free
+      + 135 vé Lucky                               
           </pre>
       </div>
 
@@ -399,11 +399,11 @@
         </div>
 
         <pre class="text-popup">
-  - Hộp quà 50.000 KC:
-  + Cụm Reset 
-  + 4 Reset Card
-  + Cụm Free
-  + 60 vé Lucky                               
+  - HỘP QUÀ 50.000 KC:
+  + Cụm Reset :
+      + 4 Reset Card
+      + Cụm Free
+      + 60 vé Lucky                               
           </pre>
       </div>
 
